Change title from 'Herencias - Viewer & Filtros' to 'asdf'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Herencias - Viewer & Filtros</title>
+<title>asdf</title>
 
 <style>
   /* === Base Dark Style tipo rgb(32,38,46) === */
