Update text and labels in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>asdf</title>
+<title>ete search</title>
 
 <style>
   /* === Base Dark Style tipo rgb(32,38,46) === */
@@ -72,21 +72,21 @@
 
 <body>
 
-<h1>Herencias (Viewer & Filtros)</h1>
+<h1>yupi es tilin insano</h1>
 
 <!-- ================== IMPORTADOR ================== -->
 <div class="box">
-  <label>Subir CSV
+  <label>Upload CSV
     <input type="file" id="csvFile" accept=".csv,text/csv" />
   </label>
 
-  <label>Pegar CSV
+  <label>Paste CSV
     <textarea id="pasteArea" rows="6"></textarea>
   </label>
 
-  <button id="importBtn">Importar CSV</button>
-  <button id="clearBtn">Limpiar tabla</button>
-  <button id="downloadBtn">Exportar filtrados</button>
+  <button id="importBtn">Import CSV</button>
+  <button id="clearBtn">Clear</button>
+  <button id="downloadBtn">Export</button>
 </div>
 
 <!-- ================== FILTROS ================== -->
@@ -114,13 +114,12 @@
     <div><label>Front ≥</label><input type="number" id="fFront" /></div>
   </div>
 
-  <button id="applyFilters">Aplicar filtros</button>
+  <button id="applyFilters">Apply</button>
   <button id="resetFilters">Reset</button>
 </div>
 
 <!-- ================== TABLA ================== -->
 <div class="box" id="tableContainer" style="display:none">
-  <h2>Resultados <span id="count" class="small"></span></h2>
   <div style="overflow:auto; max-height:55vh;">
     <table id="dataTable"><thead></thead><tbody></tbody></table>
   </div>
